--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <span class="tag-pill">ACP & clustering</span>
                         <span class="tag-pill">Visualisation</span>
                     </div>
-                    <a class="project-link" href="project1.md">+ Détails du projet</a>
+                    <a class="project-link" href="project1.html">+ Détails du projet</a>
                 </article>
 
                 <!-- Projet 2 -->
@@ -257,7 +257,7 @@
                         <span class="tag-pill">Machine Learning</span>
                         <span class="tag-pill">Churn</span>
                     </div>
-                    <a class="project-link" href="project2.md">+ Détails du projet</a>
+                    <a class="project-link" href="project2.html">+ Détails du projet</a>
                 </article>
 
                 <!-- Projet 3 -->
@@ -274,7 +274,7 @@
                         <span class="tag-pill">AFC</span>
                         <span class="tag-pill">Statistiques</span>
                     </div>
-                    <a class="project-link" href="project3.md">+ Détails du projet</a>
+                    <a class="project-link" href="project3.html">+ Détails du projet</a>
                 </article>
 
                 <!-- Projet 4 -->
@@ -291,7 +291,7 @@
                         <span class="tag-pill">Pandas</span>
                         <span class="tag-pill">Data processing</span>
                     </div>
-                    <a class="project-link" href="project4.md">+ Détails du projet</a>
+                    <a class="project-link" href="project4.html">+ Détails du projet</a>
                 </article>
 
             </div>
