--- a/project2.html
+++ b/project2.html
@@ -198,7 +198,7 @@ a {
             <li>accuracy ;</li>
             <li>sensibilité ;</li>
             <li>spécificité ;</li>
-            <li>cour Bes ROC.</li>
+            <li>courbes ROC.</li>
         </ul>
         <p>
             Cette comparaison permet d'identifier le meilleur modèle pour prédire le churn client.
