--- a/project1.html
+++ b/project1.html
@@ -6,125 +6,220 @@
 <title>Projet 1 – Analyse des Coupes du Monde</title>
 
 <style>
-body {
-    margin: 0;
-    background: #050814;
-    color: #e5e7eb;
-    font-family: system-ui, -apple-system, sans-serif;
-    padding: 32px;
-    line-height: 1.6;
-}
+    body {
+        margin: 0;
+        background: radial-gradient(circle at top, #020617 0, #020617 40%, #000000 100%);
+        color: #e5e7eb;
+        font-family: system-ui, -apple-system, sans-serif;
+        line-height: 1.6;
+    }
 
-.container {
-    max-width: 900px;
-    margin: auto;
-}
+    .wrapper {
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 40px 16px 60px;
+    }
 
-h1 {
-    font-size: 32px;
-    color: white;
-    margin-bottom: 10px;
-}
+    .top-bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 24px;
+        font-size: 13px;
+        color: #9ca3af;
+    }
 
-h2 {
-    font-size: 22px;
-    color: #93c5fd;
-    margin-top: 30px;
-}
+    .badge {
+        display: inline-flex;
+        align-items: center;
+        gap: 6px;
+        padding: 4px 10px;
+        border-radius: 999px;
+        background: rgba(15,23,42,0.9);
+        border: 1px solid rgba(148,163,184,0.3);
+        font-size: 11px;
+    }
 
-.card {
-    background: #0b0f1d;
-    border-radius: 16px;
-    padding: 20px 24px;
-    border: 1px solid #1f2937;
-    margin-top: 14px;
-}
+    h1 {
+        font-size: 30px;
+        margin-bottom: 6px;
+    }
 
-ul {
-    padding-left: 20px;
-}
+    .subtitle {
+        color: #9ca3af;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
 
-strong {
-    color: #f3f4f6;
-}
+    .glass {
+        background: rgba(15,23,42,0.85);
+        border-radius: 18px;
+        border: 1px solid rgba(148,163,184,0.4);
+        box-shadow: 0 18px 50px rgba(15,23,42,0.9);
+        padding: 18px 20px;
+        margin-bottom: 18px;
+    }
 
-a {
-    color: #93c5fd;
-}
+    h2 {
+        font-size: 20px;
+        color: #bfdbfe;
+        margin: 18px 0 10px;
+    }
 
-.button {
-    display: inline-block;
-    margin-top: 25px;
-    padding: 10px 16px;
-    border-radius: 8px;
-    border: 1px solid #1f2937;
-    background: #111827;
-    color: white;
-    text-decoration: none;
-}
-.button:hover {
-    border-color: #6366f1;
-}
+    h3 {
+        font-size: 16px;
+        color: #c7d2fe;
+        margin: 12px 0 6px;
+    }
+
+    ul {
+        padding-left: 20px;
+        margin: 6px 0;
+    }
+
+    a {
+        color: #93c5fd;
+    }
+
+    .button-row {
+        margin-top: 22px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 8px 14px;
+        border-radius: 999px;
+        border: 1px solid rgba(148,163,184,0.6);
+        background: rgba(15,23,42,0.9);
+        font-size: 13px;
+        text-decoration: none;
+        color: #e5e7eb;
+    }
+
+    .btn:hover {
+        border-color: #6366f1;
+    }
 </style>
 </head>
 
 <body>
-<div class="container">
+<div class="wrapper">
 
-    <h1>Projet 1 — Analyse des Coupes du Monde (1930–2014)</h1>
+    <div class="top-bar">
+        <div>Projet 1 · R · Statistiques & ML</div>
+        <span class="badge">⚽ Analyse des Coupes du Monde</span>
+    </div>
 
-    <div class="card">
+    <h1>Analyse des Coupes du Monde (1930–2014)</h1>
+    <p class="subtitle">
+        Étude complète des Coupes du Monde de football : affluence, performances des équipes,
+        analyses uni/bivariées, visualisations, régression logistique, ACP et clustering.
+    </p>
+
+    <div class="glass">
+        <h2>Objectif du projet</h2>
         <p>
-            Projet complet d’analyse statistique des Coupes du Monde :
-            préparation des données, analyses uni/bivariées, visualisations,
-            régression logistique, ACP et clustering.
+            Ce projet a pour but d’analyser l’évolution des Coupes du Monde depuis 1930 et de mettre en évidence
+            les dynamiques sportives et économiques du tournoi.
+        </p>
+        <p>Compétences mobilisées :</p>
+        <ul>
+            <li>Nettoyage et préparation de plusieurs bases de données,</li>
+            <li>analyses statistiques (uni/bivariées),</li>
+            <li>visualisations avancées avec <strong>ggplot2</strong>,</li>
+            <li>modélisation (régression logistique),</li>
+            <li>analyses multivariées : <strong>ACP</strong> et <strong>clustering</strong>.</li>
+        </ul>
+    </div>
+
+    <div class="glass">
+        <h2>Données utilisées</h2>
+        <p>Le projet repose sur trois fichiers :</p>
+        <ul>
+            <li><strong>world_cups.csv</strong> : informations par édition (année, pays hôte, vainqueur, affluence),</li>
+            <li><strong>world_cup_matches.csv</strong> : détails des matchs (équipes, scores, stades),</li>
+            <li><strong>data_dictionary.csv</strong> : dictionnaire des variables.</li>
+        </ul>
+        <p>
+            Au total, plus de <strong>800 matchs</strong> sont couverts entre 1930 et 2014,
+            ce qui permet une analyse historique fine du tournoi.
         </p>
     </div>
 
-    <h2>Objectif du projet</h2>
-    <div class="card">
-        <p>Ce projet a pour but d’analyser l’évolution des Coupes du Monde depuis 1930.  
-        Compétences démontrées :</p>
+    <div class="glass">
+        <h2>Principales analyses réalisées</h2>
+
+        <h3>1. Analyse univariée</h3>
         <ul>
-            <li>Nettoyage et préparation des données</li>
-            <li>Analyses statistiques (uni/bivariées)</li>
-            <li>Visualisation avec ggplot2</li>
-            <li>Machine Learning (régression logistique)</li>
-            <li>ACP et clustering</li>
+            <li>Évolution de l’affluence par édition,</li>
+            <li>nombre d’équipes qualifiées au fil du temps,</li>
+            <li>palmarès des nations les plus titrées.</li>
+        </ul>
+        <p>
+            Résultats : forte hausse de l’affluence à partir des années 1970,
+            record en 1994 (USA) avec plus de 3,5M de spectateurs,
+            élargissement du format jusqu’à 32 équipes.
+        </p>
+
+        <h3>2. Analyse bivariée</h3>
+        <ul>
+            <li>relation entre <strong>année</strong> et <strong>affluence</strong>,</li>
+            <li>impact du continent sur les performances,</li>
+            <li>évolution des <strong>buts par match</strong> par décennie.</li>
+        </ul>
+
+        <h3>3. Visualisations</h3>
+        <ul>
+            <li>courbes d’affluence par édition,</li>
+            <li>distributions des buts,</li>
+            <li>comparaisons par continent,</li>
+            <li>cartes des pays hôtes,</li>
+            <li>scores moyens par phase du tournoi.</li>
         </ul>
     </div>
 
-    <h2>Données utilisées</h2>
-    <div class="card">
-        <p>Les données proviennent de trois fichiers :</p>
-        <ul>
-            <li><strong>world_cups.csv</strong> — informations par édition</li>
-            <li><strong>world_cup_matches.csv</strong> — détails des matchs</li>
-            <li><strong>data_dictionary.csv</strong> — dictionnaire des variables</li>
-        </ul>
-        <p><strong>Plus de 800 matchs</strong> analysés.</p>
-    </div>
+    <div class="glass">
+        <h2>Modélisation & méthodes multivariées</h2>
 
-    <h2>Résultats clés</h2>
-    <div class="card">
-        <ul>
-            <li>L’affluence augmente fortement depuis 1970.</li>
-            <li>Record : Coupe du Monde 1994 (USA) : 3,5M spectateurs.</li>
-            <li>Équipes les plus titrées : Brésil, Allemagne, Italie.</li>
-            <li>Baisse progressive du nombre de buts/match.</li>
-        </ul>
-    </div>
+        <h3>Régression logistique</h3>
+        <p>
+            Une régression logistique est utilisée pour modéliser la probabilité de victoire d’une équipe
+            en fonction de variables comme les buts marqués, les buts encaissés, le continent,
+            l’année et la phase de la compétition.
+        </p>
 
-    <h2>Code du projet</h2>
-    <div class="card">
-        <p>Accéder au code :</p>
+        <h3>ACP et clustering</h3>
+        <p>
+            L’Analyse en Composantes Principales (ACP) permet de résumer les profils des équipes
+            (offensives vs défensives) et de visualiser les proximités entre nations.
+        </p>
+        <p>
+            Un <strong>clustering</strong> (k-means) est ensuite réalisé pour segmenter les nations en groupes :
+        </p>
         <ul>
-            <li><a href="code/coupe%20du%20monde.Rmd">📄 Code R (Rmd)</a></li>
-            <li><a href="coupe%20du%20monde.nb.html">🔍 Version HTML</a></li>
+            <li>nations très performantes (Brésil, Allemagne, Italie…),</li>
+            <li>nations intermédiaires (France, Argentine, Espagne…),</li>
+            <li>nations plus irrégulières ou émergentes.</li>
         </ul>
     </div>
 
-    <a href="index.html" class="button">⬅ Retour à l'accueil</a>
+    <div class="glass">
+        <h2>Code & livrables</h2>
+        <p>Le projet est entièrement développé sous R Markdown.</p>
+        <ul>
+            <li><a href="code/coupe%20du%20monde.Rmd">📄 Code R complet (Rmd)</a></li>
+            <li><a href="coupe%20du%20monde.nb.html">🔍 Version HTML du rapport</a></li>
+        </ul>
+
+        <div class="button-row">
+            <a href="index.html" class="btn">⬅ Retour au portfolio</a>
+        </div>
+    </div>
 
 </div>
 </body>
